feat:add edit and delete photo endpoint
