# interfaces/http/api/photo_handler.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"log"
 	"mygram/domains"
 	"mygram/domains/model"
 	"mygram/infrastructures/validation"
@@ -23,8 +24,13 @@ type PhotoHandler struct {
 	validate validator.Validate
 }
 
-func (handler PhotoHandler) Route(app *fiber.App){
-	app.Post("photo",middleware.Verify(),handler.PostPhoto)	
+func (handler PhotoHandler) Route(app *fiber.App){	
+	// auth
+	photo:=app.Group("photo",middleware.Verify())
+	photo.Post("/",handler.PostPhoto)	
+	photo.Get("/",handler.ListPhoto)
+	photo.Get("/:id",handler.GetPhoto)
+	photo.Put("/:id",handler.UpdatePhoto)
 }
 
 type MyCustomClaims struct {
@@ -79,5 +85,121 @@ func (handler PhotoHandler) PostPhoto(ctx *fiber.Ctx) error {
 	if errCode == "500" {
 		model.InternalServerErrorResponse(ctx,"INTERNAL SERVER ERROR",nil)
 	}
+	return nil
+}
+
+
+// Registeruser List Photo 
+// @Summary List Photo
+// @Description List Photo
+// @Tags photo
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.WebResponse{data=[]model.PhotoResponse}
+// @Failure 400 {string} model.WebResponse{code=400}
+// @Failure 500 {string} model.WebResponse{code=500}
+// @Router /photo [GET]
+func (handler PhotoHandler) ListPhoto(ctx *fiber.Ctx) error{
+	res,errCode := handler.usecase.FindAll()
+
+	if errCode == "200"{
+		model.SuccessResponse(ctx,"SUCCESS GET PHOTO",res)
+	}
+
+	if errCode == "404"{
+		model.NotFoundResponse(ctx,"PHOTO NOT FOUND",res)
+	}
+
+	if errCode == "500" {
+		model.InternalServerErrorResponse(ctx,"INTERNAL SERVER ERROR",nil)
+	}
+	return nil
+}
+
+
+// Registeruser List Photo 
+// @Summary List Photo
+// @Description List Photo
+// @Tags photo
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.WebResponse{data=model.PhotoResponse}
+// @Failure 404 {string} model.WebResponse{code=404}
+// @Failure 500 {string} model.WebResponse{code=500}
+// @Router /photo/id [GET]
+func (handler PhotoHandler) GetPhoto(ctx *fiber.Ctx) error {
+	id := ctx.Params("id")
+	res,errCode := handler.usecase.GetPhotoById(id)
+
+	if errCode == "200"{
+		model.SuccessResponse(ctx,"SUCCESS GET PHOTO",res)
+	}
+
+	if errCode == "404"{
+		model.NotFoundResponse(ctx,"PHOTO NOT FOUND",res)
+	}
+
+	if errCode == "500" {
+		model.InternalServerErrorResponse(ctx,"INTERNAL SERVER ERROR",nil)
+	}
+	return nil
+}
+
+// Registeruser Edit Photo 
+// @Summary Edit Photo
+// @Description Edit Photo
+// @Tags photo
+// @Accept json
+// @Produce json
+// @Param photo body models.CreatePhotoRequest true "Register book"
+// @Success 200 {object} model.WebResponse{data=model.PhotoResponse}
+// @Failure 404 {string} model.WebResponse{code=404}
+// @Failure 500 {string} model.WebResponse{code=500}
+// @Router /photo/id [PUT]
+func (handler PhotoHandler) UpdatePhoto(ctx *fiber.Ctx) error {
+	var request model.CreatePhotoRequest
+	ctx.BodyParser(&request)
+	id := ctx.Params("id")
+	err := handler.validate.Struct(&request)
+	if err != nil {
+		log.Println(err)
+	}
+	user := ctx.Locals("user").(*jwt.Token)
+	claims := user.Claims.(jwt.MapClaims)
+	email := claims["email"].(string)
+	request.Email = email
+	// log.Print("ID",id)
+	// log.Print("REQUEST",request)
+	// log.Print("EMAIL",email)
+	if err != nil {
+		validationErrors := err.(validator.ValidationErrors)
+
+		out := make([]validation.ErrorMessage,len(validationErrors))
+		for i, fieldError := range validationErrors {
+			out[i] = validation.ErrorMessage{
+				fieldError.Field(),
+				validation.GetErrorMsg(fieldError),
+			}
+		}
+		model.BadRequestResponse(ctx,"CLIENT SERVER ERROR",out)
+		return nil
+	}
+	res,errCode := handler.usecase.EditPhoto(id,model.UpdatePhotoRequest(request))
+	log.Println(errCode)
+	if errCode == "200"{
+		model.SuccessResponse(ctx,"SUCCESS GET PHOTO",res)
+		return nil
+	}
+
+	if errCode == "404"{
+		model.NotFoundResponse(ctx,"PHOTO NOT FOUND",res)
+		return nil
+	}
+
+	if errCode == "500" {
+		model.InternalServerErrorResponse(ctx,"INTERNAL SERVER ERROR",nil)
+		return nil
+	}
+
 	return nil
 }
